--- a/BlazorApp7/BlazorApp7/Components/Pages/Weather.razor
+++ b/BlazorApp7/BlazorApp7/Components/Pages/Weather.razor
@@ -1,5 +1,6 @@
 ﻿@page "/weather"
 @attribute [StreamRendering]
+@layout BlazorApp7.Components.Layout.LandingLayout
 
 <PageTitle>Weather</PageTitle>
 
