--- a/BlazorApp7/BlazorApp7/Components/Account/Shared/ManageLayout.razor
+++ b/BlazorApp7/BlazorApp7/Components/Account/Shared/ManageLayout.razor
@@ -1,9 +1,9 @@
 ﻿@inherits LayoutComponentBase
-@layout BlazorApp7.Components.Layout.MainLayout
+@layout BlazorApp7.Components.Layout.LandingLayout
 
 <h1 class="mb-6 text-2xl font-bold">Manage your account</h1>
 
-<div class="space-y-6">
+<div class="mx-auto max-w-5xl space-y-6">
     <h2 class="text-xl font-semibold">Change your account settings</h2>
     <hr class="border-gray-300" />
 
