add gms backend

--- a/BlazorApp7/BlazorApp7/Components/App.razor
+++ b/BlazorApp7/BlazorApp7/Components/App.razor
@@ -12,7 +12,9 @@
 </head>
 
 <body>
-    <Routes />
+    <ThemeProvider>
+        <Routes />
+    </ThemeProvider>
     <script src="_framework/blazor.web.js"></script>
     <script src="js/site.js"></script>
 </body>
