--- a/BlazorApp7/BlazorApp7.Client/_Imports.razor
+++ b/BlazorApp7/BlazorApp7.Client/_Imports.razor
@@ -9,5 +9,6 @@
 @using Microsoft.JSInterop
 
 @using BlazorApp7.Client
-@using BlazorApp7.Client.Components.UI
-@using static BlazorApp7.Client.Components.UI.Button
+
+@using BlazorApp7.Components.Tailwind
+@using static BlazorApp7.Components.Tailwind.Button
