--- a/BlazorApp7/BlazorApp7/Components/App.razor
+++ b/BlazorApp7/BlazorApp7/Components/App.razor
@@ -11,10 +11,11 @@
     <HeadOutlet />
 </head>
 
-<body>
-    <ThemeProvider>
+<body class="bg-white dark:bg-black dark:text-white">
+@* <body> *@
+    @* <ThemeProvider> *@
         <Routes />
-    </ThemeProvider>
+    @* </ThemeProvider> *@
     <script src="_framework/blazor.web.js"></script>
     <script src="js/site.js"></script>
 </body>
