--- a/BlazorApp7/BlazorApp7/Components/Layout/LandingLayout.razor
+++ b/BlazorApp7/BlazorApp7/Components/Layout/LandingLayout.razor
@@ -1,5 +1,6 @@
 ﻿@inherits LayoutComponentBase
-@layout BlazorApp7.Components.Layout.MainLayout
+
+@layout MainLayout
 
 <div class="mx-auto mb-20 mt-8 max-w-fit">
     @Body
