--- a/BlazorApp7/BlazorApp7/Components/Pages/Home.razor
+++ b/BlazorApp7/BlazorApp7/Components/Pages/Home.razor
@@ -1,5 +1,9 @@
-﻿@page "/"
-@layout BlazorApp7.Components.Layout.LandingLayout
+﻿@using BlazorApp7.Data
+@using BlazorApp7.GMS.Entities
+@using Microsoft.AspNetCore.Identity
+@using Microsoft.EntityFrameworkCore
+
+@page "/"
 
 <PageTitle>Home</PageTitle>
 
