--- a/BlazorApp7/BlazorApp7/Components/_Imports.razor
+++ b/BlazorApp7/BlazorApp7/Components/_Imports.razor
@@ -8,12 +8,12 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.FluentUI.AspNetCore.Components
 @using Microsoft.JSInterop
-
 @inject IJSRuntime JsRunTime
 @* @inject IToastService ToastService *@
 
 @using BlazorApp7
 @using BlazorApp7.Components
 @using BlazorApp7.Client
-@using BlazorApp7.Client.Components.UI
-@using static BlazorApp7.Client.Components.UI.Button
+
+@using BlazorApp7.Components.Tailwind
+@using static BlazorApp7.Components.Tailwind.Button
