--- a/BlazorApp7/BlazorApp7.Client/Pages/Counter.razor
+++ b/BlazorApp7/BlazorApp7.Client/Pages/Counter.razor
@@ -8,7 +8,7 @@
 
 <p role="status">Current count: @currentCount</p>
 
-<Button Size="ButtonSize.Large" OnClick="IncrementCount">Click me</Button>
+<Button OnClick="IncrementCount">Click me</Button>
 
 @code {
     private int currentCount = 0;
