--- a/BlazorApp7/BlazorApp7/Components/Layout/MainLayout.razor
+++ b/BlazorApp7/BlazorApp7/Components/Layout/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <div class="relative flex min-h-screen flex-col">
-    <div class="border-border/40 bg-background/95 sticky top-0 z-50 w-full backdrop-blur supports-[backdrop-filter]:bg-background/60">
+    <div class="sticky top-0 z-50 w-full">
         <NavMenu />
     </div>
 
